# role-wsl-keeagent

./: pyproject.toml
files/: msysgit2unix-socket.py
meta/: main.yml
tasks/: main.yml
