[tool.poetry]
name = "role-wsl-keeagent"
version = "0.1.0"
description = ""
authors = ["Thomas SAMTER <samter.thomas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ansible-lint = "^4.2.0"
jinja2 = "^2.11.2"
yapf = "^0.30.0"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
